// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Venture renders snapshot 1`] = `
<div
  className="Component Venture Test"
  id="test"
>
  <div
    className="Title"
  >
    <h1>
      <span>
        TextVenture
      </span>
    </h1>
  </div>
  <div
    className="Component Scene"
    id="test-scene"
  >
    <h2>
      Scene 1
    </h2>
    <div
      className="Content"
    >
      <p>
        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, At accusam aliquyam diam diam dolore dolores duo eirmod eos erat, et nonumy sed tempor et et invidunt justo labore Stet clita ea et gubergren, kasd magna no rebum. sanctus sea sed takimata ut vero voluptua. est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat. Consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo
      </p>
    </div>
  </div>
  <div
    className="Component Inventory"
    id="test-inventory"
  >
    <h2>
      Inventory
    </h2>
    <div
      className="Content"
    >
      <div>
        item0
      </div>
      <div>
        item1
      </div>
      <div>
        item2
      </div>
      <div>
        item3
      </div>
      <div>
        item4
      </div>
      <div>
        item5
      </div>
      <div>
        item6
      </div>
      <div>
        item7
      </div>
      <div>
        item8
      </div>
      <div>
        item9
      </div>
      <div>
        item10
      </div>
      <div>
        item11
      </div>
      <div>
        item12
      </div>
      <div>
        item13
      </div>
      <div>
        item14
      </div>
      <div>
        item15
      </div>
      <div>
        item16
      </div>
      <div>
        item17
      </div>
      <div>
        item18
      </div>
      <div>
        item19
      </div>
      <div>
        item20
      </div>
      <div>
        item21
      </div>
      <div>
        item22
      </div>
      <div>
        item23
      </div>
      <div>
        item24
      </div>
      <div>
        item25
      </div>
      <div>
        item26
      </div>
      <div>
        item27
      </div>
      <div>
        item28
      </div>
      <div>
        item29
      </div>
      <div>
        item30
      </div>
      <div>
        item31
      </div>
      <div>
        item32
      </div>
      <div>
        item33
      </div>
      <div>
        item34
      </div>
      <div>
        item35
      </div>
      <div>
        item36
      </div>
      <div>
        item37
      </div>
      <div>
        item38
      </div>
      <div>
        item39
      </div>
      <div>
        item40
      </div>
      <div>
        item41
      </div>
      <div>
        item42
      </div>
      <div>
        item43
      </div>
      <div>
        item44
      </div>
      <div>
        item45
      </div>
      <div>
        item46
      </div>
      <div>
        item47
      </div>
      <div>
        item48
      </div>
      <div>
        item49
      </div>
      <div>
        item50
      </div>
      <div>
        item51
      </div>
      <div>
        item52
      </div>
      <div>
        item53
      </div>
      <div>
        item54
      </div>
      <div>
        item55
      </div>
      <div>
        item56
      </div>
      <div>
        item57
      </div>
      <div>
        item58
      </div>
      <div>
        item59
      </div>
      <div>
        item60
      </div>
      <div>
        item61
      </div>
      <div>
        item62
      </div>
      <div>
        item63
      </div>
      <div>
        item64
      </div>
      <div>
        item65
      </div>
      <div>
        item66
      </div>
      <div>
        item67
      </div>
      <div>
        item68
      </div>
      <div>
        item69
      </div>
      <div>
        item70
      </div>
      <div>
        item71
      </div>
      <div>
        item72
      </div>
      <div>
        item73
      </div>
      <div>
        item74
      </div>
      <div>
        item75
      </div>
      <div>
        item76
      </div>
      <div>
        item77
      </div>
      <div>
        item78
      </div>
      <div>
        item79
      </div>
      <div>
        item80
      </div>
      <div>
        item81
      </div>
      <div>
        item82
      </div>
      <div>
        item83
      </div>
      <div>
        item84
      </div>
      <div>
        item85
      </div>
      <div>
        item86
      </div>
      <div>
        item87
      </div>
      <div>
        item88
      </div>
      <div>
        item89
      </div>
      <div>
        item90
      </div>
      <div>
        item91
      </div>
      <div>
        item92
      </div>
      <div>
        item93
      </div>
      <div>
        item94
      </div>
      <div>
        item95
      </div>
      <div>
        item96
      </div>
      <div>
        item97
      </div>
      <div>
        item98
      </div>
      <div>
        item99
      </div>
    </div>
  </div>
  <div
    className="Component Actions"
    id="test-actions"
  >
    <div
      className="Action"
      id="test-actions-giveTo"
      onClick={[Function]}
    >
      Gib
    </div>
    <div
      className="Action"
      id="test-actions-open"
      onClick={[Function]}
    >
      Öffne
    </div>
    <div
      className="Action"
      id="test-actions-close"
      onClick={[Function]}
    >
      Schließe
    </div>
    <div
      className="Action"
      id="test-actions-pickUp"
      onClick={[Function]}
    >
      Nimm
    </div>
    <div
      className="Action"
      id="test-actions-lookAt"
      onClick={[Function]}
    >
      Schau
    </div>
    <div
      className="Action"
      id="test-actions-talkTo"
      onClick={[Function]}
    >
      Rede mit
    </div>
    <div
      className="Action"
      id="test-actions-push"
      onClick={[Function]}
    >
      Drücke
    </div>
    <div
      className="Action"
      id="test-actions-pull"
      onClick={[Function]}
    >
      Ziehe
    </div>
    <div
      className="Action"
      id="test-actions-goto"
      onClick={[Function]}
    >
      Gehe zu
    </div>
    <div
      className="Action"
      id="test-actions-use"
      onClick={[Function]}
    >
      Benutze
    </div>
    <div
      className="Action"
      id="test-actions-save"
      onClick={[Function]}
    >
      Speichern
    </div>
    <div
      className="Action"
      id="test-actions-load"
      onClick={[Function]}
    >
      Laden
    </div>
  </div>
  <div
    className="Component Console"
    id="test-console"
  />
</div>
`;

exports[`Venture renders with no editor 1`] = `
<div
  className="Component Venture Test"
  id="test"
>
  <div
    className="Title"
  >
    <h1>
      <span>
        TextVenture
      </span>
    </h1>
  </div>
  <div
    className="Component Scene"
    id="test-scene"
  >
    <h2>
      Scene 1
    </h2>
    <div
      className="Content"
    >
      <p>
        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, At accusam aliquyam diam diam dolore dolores duo eirmod eos erat, et nonumy sed tempor et et invidunt justo labore Stet clita ea et gubergren, kasd magna no rebum. sanctus sea sed takimata ut vero voluptua. est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat. Consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo
      </p>
    </div>
  </div>
  <div
    className="Component Inventory"
    id="test-inventory"
  >
    <h2>
      Inventory
    </h2>
    <div
      className="Content"
    >
      <div>
        item0
      </div>
      <div>
        item1
      </div>
      <div>
        item2
      </div>
      <div>
        item3
      </div>
      <div>
        item4
      </div>
      <div>
        item5
      </div>
      <div>
        item6
      </div>
      <div>
        item7
      </div>
      <div>
        item8
      </div>
      <div>
        item9
      </div>
      <div>
        item10
      </div>
      <div>
        item11
      </div>
      <div>
        item12
      </div>
      <div>
        item13
      </div>
      <div>
        item14
      </div>
      <div>
        item15
      </div>
      <div>
        item16
      </div>
      <div>
        item17
      </div>
      <div>
        item18
      </div>
      <div>
        item19
      </div>
      <div>
        item20
      </div>
      <div>
        item21
      </div>
      <div>
        item22
      </div>
      <div>
        item23
      </div>
      <div>
        item24
      </div>
      <div>
        item25
      </div>
      <div>
        item26
      </div>
      <div>
        item27
      </div>
      <div>
        item28
      </div>
      <div>
        item29
      </div>
      <div>
        item30
      </div>
      <div>
        item31
      </div>
      <div>
        item32
      </div>
      <div>
        item33
      </div>
      <div>
        item34
      </div>
      <div>
        item35
      </div>
      <div>
        item36
      </div>
      <div>
        item37
      </div>
      <div>
        item38
      </div>
      <div>
        item39
      </div>
      <div>
        item40
      </div>
      <div>
        item41
      </div>
      <div>
        item42
      </div>
      <div>
        item43
      </div>
      <div>
        item44
      </div>
      <div>
        item45
      </div>
      <div>
        item46
      </div>
      <div>
        item47
      </div>
      <div>
        item48
      </div>
      <div>
        item49
      </div>
      <div>
        item50
      </div>
      <div>
        item51
      </div>
      <div>
        item52
      </div>
      <div>
        item53
      </div>
      <div>
        item54
      </div>
      <div>
        item55
      </div>
      <div>
        item56
      </div>
      <div>
        item57
      </div>
      <div>
        item58
      </div>
      <div>
        item59
      </div>
      <div>
        item60
      </div>
      <div>
        item61
      </div>
      <div>
        item62
      </div>
      <div>
        item63
      </div>
      <div>
        item64
      </div>
      <div>
        item65
      </div>
      <div>
        item66
      </div>
      <div>
        item67
      </div>
      <div>
        item68
      </div>
      <div>
        item69
      </div>
      <div>
        item70
      </div>
      <div>
        item71
      </div>
      <div>
        item72
      </div>
      <div>
        item73
      </div>
      <div>
        item74
      </div>
      <div>
        item75
      </div>
      <div>
        item76
      </div>
      <div>
        item77
      </div>
      <div>
        item78
      </div>
      <div>
        item79
      </div>
      <div>
        item80
      </div>
      <div>
        item81
      </div>
      <div>
        item82
      </div>
      <div>
        item83
      </div>
      <div>
        item84
      </div>
      <div>
        item85
      </div>
      <div>
        item86
      </div>
      <div>
        item87
      </div>
      <div>
        item88
      </div>
      <div>
        item89
      </div>
      <div>
        item90
      </div>
      <div>
        item91
      </div>
      <div>
        item92
      </div>
      <div>
        item93
      </div>
      <div>
        item94
      </div>
      <div>
        item95
      </div>
      <div>
        item96
      </div>
      <div>
        item97
      </div>
      <div>
        item98
      </div>
      <div>
        item99
      </div>
    </div>
  </div>
  <div
    className="Component Actions"
    id="test-actions"
  >
    <div
      className="Action"
      id="test-actions-giveTo"
      onClick={[Function]}
    >
      Gib
    </div>
    <div
      className="Action"
      id="test-actions-open"
      onClick={[Function]}
    >
      Öffne
    </div>
    <div
      className="Action"
      id="test-actions-close"
      onClick={[Function]}
    >
      Schließe
    </div>
    <div
      className="Action"
      id="test-actions-pickUp"
      onClick={[Function]}
    >
      Nimm
    </div>
    <div
      className="Action"
      id="test-actions-lookAt"
      onClick={[Function]}
    >
      Schau
    </div>
    <div
      className="Action"
      id="test-actions-talkTo"
      onClick={[Function]}
    >
      Rede mit
    </div>
    <div
      className="Action"
      id="test-actions-push"
      onClick={[Function]}
    >
      Drücke
    </div>
    <div
      className="Action"
      id="test-actions-pull"
      onClick={[Function]}
    >
      Ziehe
    </div>
    <div
      className="Action"
      id="test-actions-goto"
      onClick={[Function]}
    >
      Gehe zu
    </div>
    <div
      className="Action"
      id="test-actions-use"
      onClick={[Function]}
    >
      Benutze
    </div>
    <div
      className="Action"
      id="test-actions-save"
      onClick={[Function]}
    >
      Speichern
    </div>
    <div
      className="Action"
      id="test-actions-load"
      onClick={[Function]}
    >
      Laden
    </div>
  </div>
  <div
    className="Component Console"
    id="test-console"
  />
</div>
`;

exports[`Venture renders with venture dialog snapshot 1`] = `
<div
  className="Component Venture Test"
  id="test"
>
  <div
    className="Title"
  >
    <h1>
      <span>
        TextVenture
      </span>
    </h1>
  </div>
  <div
    className="Component Scene"
    id="test-scene"
  >
    <h2>
      Scene 1
    </h2>
    <div
      className="Content"
    >
      <p>
        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, At accusam aliquyam diam diam dolore dolores duo eirmod eos erat, et nonumy sed tempor et et invidunt justo labore Stet clita ea et gubergren, kasd magna no rebum. sanctus sea sed takimata ut vero voluptua. est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat. Consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo
      </p>
    </div>
  </div>
  <div
    className="Component Inventory"
    id="test-inventory"
  >
    <h2>
      Inventory
    </h2>
    <div
      className="Content"
    >
      <div>
        item0
      </div>
      <div>
        item1
      </div>
      <div>
        item2
      </div>
      <div>
        item3
      </div>
      <div>
        item4
      </div>
      <div>
        item5
      </div>
      <div>
        item6
      </div>
      <div>
        item7
      </div>
      <div>
        item8
      </div>
      <div>
        item9
      </div>
      <div>
        item10
      </div>
      <div>
        item11
      </div>
      <div>
        item12
      </div>
      <div>
        item13
      </div>
      <div>
        item14
      </div>
      <div>
        item15
      </div>
      <div>
        item16
      </div>
      <div>
        item17
      </div>
      <div>
        item18
      </div>
      <div>
        item19
      </div>
      <div>
        item20
      </div>
      <div>
        item21
      </div>
      <div>
        item22
      </div>
      <div>
        item23
      </div>
      <div>
        item24
      </div>
      <div>
        item25
      </div>
      <div>
        item26
      </div>
      <div>
        item27
      </div>
      <div>
        item28
      </div>
      <div>
        item29
      </div>
      <div>
        item30
      </div>
      <div>
        item31
      </div>
      <div>
        item32
      </div>
      <div>
        item33
      </div>
      <div>
        item34
      </div>
      <div>
        item35
      </div>
      <div>
        item36
      </div>
      <div>
        item37
      </div>
      <div>
        item38
      </div>
      <div>
        item39
      </div>
      <div>
        item40
      </div>
      <div>
        item41
      </div>
      <div>
        item42
      </div>
      <div>
        item43
      </div>
      <div>
        item44
      </div>
      <div>
        item45
      </div>
      <div>
        item46
      </div>
      <div>
        item47
      </div>
      <div>
        item48
      </div>
      <div>
        item49
      </div>
      <div>
        item50
      </div>
      <div>
        item51
      </div>
      <div>
        item52
      </div>
      <div>
        item53
      </div>
      <div>
        item54
      </div>
      <div>
        item55
      </div>
      <div>
        item56
      </div>
      <div>
        item57
      </div>
      <div>
        item58
      </div>
      <div>
        item59
      </div>
      <div>
        item60
      </div>
      <div>
        item61
      </div>
      <div>
        item62
      </div>
      <div>
        item63
      </div>
      <div>
        item64
      </div>
      <div>
        item65
      </div>
      <div>
        item66
      </div>
      <div>
        item67
      </div>
      <div>
        item68
      </div>
      <div>
        item69
      </div>
      <div>
        item70
      </div>
      <div>
        item71
      </div>
      <div>
        item72
      </div>
      <div>
        item73
      </div>
      <div>
        item74
      </div>
      <div>
        item75
      </div>
      <div>
        item76
      </div>
      <div>
        item77
      </div>
      <div>
        item78
      </div>
      <div>
        item79
      </div>
      <div>
        item80
      </div>
      <div>
        item81
      </div>
      <div>
        item82
      </div>
      <div>
        item83
      </div>
      <div>
        item84
      </div>
      <div>
        item85
      </div>
      <div>
        item86
      </div>
      <div>
        item87
      </div>
      <div>
        item88
      </div>
      <div>
        item89
      </div>
      <div>
        item90
      </div>
      <div>
        item91
      </div>
      <div>
        item92
      </div>
      <div>
        item93
      </div>
      <div>
        item94
      </div>
      <div>
        item95
      </div>
      <div>
        item96
      </div>
      <div>
        item97
      </div>
      <div>
        item98
      </div>
      <div>
        item99
      </div>
    </div>
  </div>
  <div
    className="Component Actions"
    id="test-actions"
  >
    <div
      className="Action"
      id="test-actions-giveTo"
      onClick={[Function]}
    >
      Gib
    </div>
    <div
      className="Action"
      id="test-actions-open"
      onClick={[Function]}
    >
      Öffne
    </div>
    <div
      className="Action"
      id="test-actions-close"
      onClick={[Function]}
    >
      Schließe
    </div>
    <div
      className="Action"
      id="test-actions-pickUp"
      onClick={[Function]}
    >
      Nimm
    </div>
    <div
      className="Action"
      id="test-actions-lookAt"
      onClick={[Function]}
    >
      Schau
    </div>
    <div
      className="Action"
      id="test-actions-talkTo"
      onClick={[Function]}
    >
      Rede mit
    </div>
    <div
      className="Action"
      id="test-actions-push"
      onClick={[Function]}
    >
      Drücke
    </div>
    <div
      className="Action"
      id="test-actions-pull"
      onClick={[Function]}
    >
      Ziehe
    </div>
    <div
      className="Action"
      id="test-actions-goto"
      onClick={[Function]}
    >
      Gehe zu
    </div>
    <div
      className="Action"
      id="test-actions-use"
      onClick={[Function]}
    >
      Benutze
    </div>
    <div
      className="Action"
      id="test-actions-save"
      onClick={[Function]}
    >
      Speichern
    </div>
    <div
      className="Action"
      id="test-actions-load"
      onClick={[Function]}
    >
      Laden
    </div>
  </div>
  <div
    className="Component Console"
    id="test-console"
  />
  <div
    className="Component ModalDialog"
    id="test-dialog"
  >
    <div
      className="Dialog"
    >
      <div
        className="Header"
      >
        <span>
          Actions
        </span>
        <span
          className="X"
          id="test-dialog-x"
          onClick={[Function]}
        >
          X
        </span>
      </div>
      <div
        className="Content"
      >
        <div
          className="Component PropertyGrid"
          id="test-propertyGrid"
        >
          <div
            className="Value ExpanderContent"
          >
            <label
              className="ExpanderLabel"
              htmlFor="test-propertyGrid-item-1"
            >
              title
            </label>
            <input
              className="Editor"
              defaultValue="TextVenture"
              id="test-propertyGrid-item-1"
              onChange={[Function]}
              type="text"
            />
          </div>
          <div
            className="Value ExpanderContent"
          >
            <label
              className="ExpanderLabel"
              htmlFor="test-propertyGrid-item-2"
            >
              isEditor
            </label>
            <input
              className="Editor"
              defaultChecked={false}
              id="test-propertyGrid-item-2"
              onChange={[Function]}
              type="checkbox"
            />
          </div>
          <div
            className="Object ExpanderContent"
          >
            <input
              className="Expander"
              defaultChecked={true}
              id="test-propertyGrid-item-3"
              onChange={[Function]}
              type="checkbox"
            />
            <label
              className="ExpanderLabel"
              htmlFor="test-propertyGrid-item-3"
            >
              actions
            </label>
            <div
              className="Object ExpanderContent"
            >
              <input
                className="Expander"
                defaultChecked={true}
                id="test-propertyGrid-item-4"
                onChange={[Function]}
                type="checkbox"
              />
              <label
                className="ExpanderLabel"
                htmlFor="test-propertyGrid-item-4"
              >
                giveTo
              </label>
              <div
                className="Value ExpanderContent"
              >
                <label
                  className="ExpanderLabel"
                  htmlFor="test-propertyGrid-item-5"
                >
                  name
                </label>
                <input
                  className="Editor"
                  defaultValue="Gib"
                  id="test-propertyGrid-item-5"
                  onChange={[Function]}
                  type="text"
                />
              </div>
              <div
                className="Value ExpanderContent"
              >
                <label
                  className="ExpanderLabel"
                  htmlFor="test-propertyGrid-item-6"
                >
                  isEnabled
                </label>
                <input
                  className="Editor"
                  defaultChecked={true}
                  id="test-propertyGrid-item-6"
                  onChange={[Function]}
                  type="checkbox"
                />
              </div>
            </div>
            <div
              className="Object ExpanderContent"
            >
              <input
                className="Expander"
                defaultChecked={true}
                id="test-propertyGrid-item-7"
                onChange={[Function]}
                type="checkbox"
              />
              <label
                className="ExpanderLabel"
                htmlFor="test-propertyGrid-item-7"
              >
                open
              </label>
              <div
                className="Value ExpanderContent"
              >
                <label
                  className="ExpanderLabel"
                  htmlFor="test-propertyGrid-item-8"
                >
                  name
                </label>
                <input
                  className="Editor"
                  defaultValue="Öffne"
                  id="test-propertyGrid-item-8"
                  onChange={[Function]}
                  type="text"
                />
              </div>
              <div
                className="Value ExpanderContent"
              >
                <label
                  className="ExpanderLabel"
                  htmlFor="test-propertyGrid-item-9"
                >
                  isEnabled
                </label>
                <input
                  className="Editor"
                  defaultChecked={true}
                  id="test-propertyGrid-item-9"
                  onChange={[Function]}
                  type="checkbox"
                />
              </div>
            </div>
            <div
              className="Object ExpanderContent"
            >
              <input
                className="Expander"
                defaultChecked={true}
                id="test-propertyGrid-item-10"
                onChange={[Function]}
                type="checkbox"
              />
              <label
                className="ExpanderLabel"
                htmlFor="test-propertyGrid-item-10"
              >
                close
              </label>
              <div
                className="Value ExpanderContent"
              >
                <label
                  className="ExpanderLabel"
                  htmlFor="test-propertyGrid-item-11"
                >
                  name
                </label>
                <input
                  className="Editor"
                  defaultValue="Schließe"
                  id="test-propertyGrid-item-11"
                  onChange={[Function]}
                  type="text"
                />
              </div>
              <div
                className="Value ExpanderContent"
              >
                <label
                  className="ExpanderLabel"
                  htmlFor="test-propertyGrid-item-12"
                >
                  isEnabled
                </label>
                <input
                  className="Editor"
                  defaultChecked={true}
                  id="test-propertyGrid-item-12"
                  onChange={[Function]}
                  type="checkbox"
                />
              </div>
            </div>
            <div
              className="Object ExpanderContent"
            >
              <input
                className="Expander"
                defaultChecked={true}
                id="test-propertyGrid-item-13"
                onChange={[Function]}
                type="checkbox"
              />
              <label
                className="ExpanderLabel"
                htmlFor="test-propertyGrid-item-13"
              >
                pickUp
              </label>
              <div
                className="Value ExpanderContent"
              >
                <label
                  className="ExpanderLabel"
                  htmlFor="test-propertyGrid-item-14"
                >
                  name
                </label>
                <input
                  className="Editor"
                  defaultValue="Nimm"
                  id="test-propertyGrid-item-14"
                  onChange={[Function]}
                  type="text"
                />
              </div>
              <div
                className="Value ExpanderContent"
              >
                <label
                  className="ExpanderLabel"
                  htmlFor="test-propertyGrid-item-15"
                >
                  isEnabled
                </label>
                <input
                  className="Editor"
                  defaultChecked={true}
                  id="test-propertyGrid-item-15"
                  onChange={[Function]}
                  type="checkbox"
                />
              </div>
            </div>
            <div
              className="Object ExpanderContent"
            >
              <input
                className="Expander"
                defaultChecked={true}
                id="test-propertyGrid-item-16"
                onChange={[Function]}
                type="checkbox"
              />
              <label
                className="ExpanderLabel"
                htmlFor="test-propertyGrid-item-16"
              >
                lookAt
              </label>
              <div
                className="Value ExpanderContent"
              >
                <label
                  className="ExpanderLabel"
                  htmlFor="test-propertyGrid-item-17"
                >
                  name
                </label>
                <input
                  className="Editor"
                  defaultValue="Schau"
                  id="test-propertyGrid-item-17"
                  onChange={[Function]}
                  type="text"
                />
              </div>
              <div
                className="Value ExpanderContent"
              >
                <label
                  className="ExpanderLabel"
                  htmlFor="test-propertyGrid-item-18"
                >
                  isEnabled
                </label>
                <input
                  className="Editor"
                  defaultChecked={true}
                  id="test-propertyGrid-item-18"
                  onChange={[Function]}
                  type="checkbox"
                />
              </div>
            </div>
            <div
              className="Object ExpanderContent"
            >
              <input
                className="Expander"
                defaultChecked={true}
                id="test-propertyGrid-item-19"
                onChange={[Function]}
                type="checkbox"
              />
              <label
                className="ExpanderLabel"
                htmlFor="test-propertyGrid-item-19"
              >
                talkTo
              </label>
              <div
                className="Value ExpanderContent"
              >
                <label
                  className="ExpanderLabel"
                  htmlFor="test-propertyGrid-item-20"
                >
                  name
                </label>
                <input
                  className="Editor"
                  defaultValue="Rede mit"
                  id="test-propertyGrid-item-20"
                  onChange={[Function]}
                  type="text"
                />
              </div>
              <div
                className="Value ExpanderContent"
              >
                <label
                  className="ExpanderLabel"
                  htmlFor="test-propertyGrid-item-21"
                >
                  isEnabled
                </label>
                <input
                  className="Editor"
                  defaultChecked={true}
                  id="test-propertyGrid-item-21"
                  onChange={[Function]}
                  type="checkbox"
                />
              </div>
            </div>
            <div
              className="Object ExpanderContent"
            >
              <input
                className="Expander"
                defaultChecked={true}
                id="test-propertyGrid-item-22"
                onChange={[Function]}
                type="checkbox"
              />
              <label
                className="ExpanderLabel"
                htmlFor="test-propertyGrid-item-22"
              >
                push
              </label>
              <div
                className="Value ExpanderContent"
              >
                <label
                  className="ExpanderLabel"
                  htmlFor="test-propertyGrid-item-23"
                >
                  name
                </label>
                <input
                  className="Editor"
                  defaultValue="Drücke"
                  id="test-propertyGrid-item-23"
                  onChange={[Function]}
                  type="text"
                />
              </div>
              <div
                className="Value ExpanderContent"
              >
                <label
                  className="ExpanderLabel"
                  htmlFor="test-propertyGrid-item-24"
                >
                  isEnabled
                </label>
                <input
                  className="Editor"
                  defaultChecked={true}
                  id="test-propertyGrid-item-24"
                  onChange={[Function]}
                  type="checkbox"
                />
              </div>
            </div>
            <div
              className="Object ExpanderContent"
            >
              <input
                className="Expander"
                defaultChecked={true}
                id="test-propertyGrid-item-25"
                onChange={[Function]}
                type="checkbox"
              />
              <label
                className="ExpanderLabel"
                htmlFor="test-propertyGrid-item-25"
              >
                pull
              </label>
              <div
                className="Value ExpanderContent"
              >
                <label
                  className="ExpanderLabel"
                  htmlFor="test-propertyGrid-item-26"
                >
                  name
                </label>
                <input
                  className="Editor"
                  defaultValue="Ziehe"
                  id="test-propertyGrid-item-26"
                  onChange={[Function]}
                  type="text"
                />
              </div>
              <div
                className="Value ExpanderContent"
              >
                <label
                  className="ExpanderLabel"
                  htmlFor="test-propertyGrid-item-27"
                >
                  isEnabled
                </label>
                <input
                  className="Editor"
                  defaultChecked={true}
                  id="test-propertyGrid-item-27"
                  onChange={[Function]}
                  type="checkbox"
                />
              </div>
            </div>
            <div
              className="Object ExpanderContent"
            >
              <input
                className="Expander"
                defaultChecked={true}
                id="test-propertyGrid-item-28"
                onChange={[Function]}
                type="checkbox"
              />
              <label
                className="ExpanderLabel"
                htmlFor="test-propertyGrid-item-28"
              >
                goto
              </label>
              <div
                className="Value ExpanderContent"
              >
                <label
                  className="ExpanderLabel"
                  htmlFor="test-propertyGrid-item-29"
                >
                  name
                </label>
                <input
                  className="Editor"
                  defaultValue="Gehe zu"
                  id="test-propertyGrid-item-29"
                  onChange={[Function]}
                  type="text"
                />
              </div>
              <div
                className="Value ExpanderContent"
              >
                <label
                  className="ExpanderLabel"
                  htmlFor="test-propertyGrid-item-30"
                >
                  isEnabled
                </label>
                <input
                  className="Editor"
                  defaultChecked={true}
                  id="test-propertyGrid-item-30"
                  onChange={[Function]}
                  type="checkbox"
                />
              </div>
            </div>
            <div
              className="Object ExpanderContent"
            >
              <input
                className="Expander"
                defaultChecked={true}
                id="test-propertyGrid-item-31"
                onChange={[Function]}
                type="checkbox"
              />
              <label
                className="ExpanderLabel"
                htmlFor="test-propertyGrid-item-31"
              >
                use
              </label>
              <div
                className="Value ExpanderContent"
              >
                <label
                  className="ExpanderLabel"
                  htmlFor="test-propertyGrid-item-32"
                >
                  name
                </label>
                <input
                  className="Editor"
                  defaultValue="Benutze"
                  id="test-propertyGrid-item-32"
                  onChange={[Function]}
                  type="text"
                />
              </div>
              <div
                className="Value ExpanderContent"
              >
                <label
                  className="ExpanderLabel"
                  htmlFor="test-propertyGrid-item-33"
                >
                  isEnabled
                </label>
                <input
                  className="Editor"
                  defaultChecked={true}
                  id="test-propertyGrid-item-33"
                  onChange={[Function]}
                  type="checkbox"
                />
              </div>
            </div>
            <div
              className="Object ExpanderContent"
            >
              <input
                className="Expander"
                defaultChecked={true}
                id="test-propertyGrid-item-34"
                onChange={[Function]}
                type="checkbox"
              />
              <label
                className="ExpanderLabel"
                htmlFor="test-propertyGrid-item-34"
              >
                save
              </label>
              <div
                className="Value ExpanderContent"
              >
                <label
                  className="ExpanderLabel"
                  htmlFor="test-propertyGrid-item-35"
                >
                  name
                </label>
                <input
                  className="Editor"
                  defaultValue="Speichern"
                  id="test-propertyGrid-item-35"
                  onChange={[Function]}
                  type="text"
                />
              </div>
              <div
                className="Value ExpanderContent"
              >
                <label
                  className="ExpanderLabel"
                  htmlFor="test-propertyGrid-item-36"
                >
                  isEnabled
                </label>
                <input
                  className="Editor"
                  defaultChecked={true}
                  id="test-propertyGrid-item-36"
                  onChange={[Function]}
                  type="checkbox"
                />
              </div>
            </div>
            <div
              className="Object ExpanderContent"
            >
              <input
                className="Expander"
                defaultChecked={true}
                id="test-propertyGrid-item-37"
                onChange={[Function]}
                type="checkbox"
              />
              <label
                className="ExpanderLabel"
                htmlFor="test-propertyGrid-item-37"
              >
                load
              </label>
              <div
                className="Value ExpanderContent"
              >
                <label
                  className="ExpanderLabel"
                  htmlFor="test-propertyGrid-item-38"
                >
                  name
                </label>
                <input
                  className="Editor"
                  defaultValue="Laden"
                  id="test-propertyGrid-item-38"
                  onChange={[Function]}
                  type="text"
                />
              </div>
              <div
                className="Value ExpanderContent"
              >
                <label
                  className="ExpanderLabel"
                  htmlFor="test-propertyGrid-item-39"
                >
                  isEnabled
                </label>
                <input
                  className="Editor"
                  defaultChecked={true}
                  id="test-propertyGrid-item-39"
                  onChange={[Function]}
                  type="checkbox"
                />
              </div>
            </div>
          </div>
          <div
            className="Object ExpanderContent"
          >
            <input
              className="Expander"
              defaultChecked={true}
              id="test-propertyGrid-item-40"
              onChange={[Function]}
              type="checkbox"
            />
            <label
              className="ExpanderLabel"
              htmlFor="test-propertyGrid-item-40"
            >
              objects
            </label>
          </div>
          <div
            className="Object ExpanderContent"
          >
            <input
              className="Expander"
              defaultChecked={true}
              id="test-propertyGrid-item-41"
              onChange={[Function]}
              type="checkbox"
            />
            <label
              className="ExpanderLabel"
              htmlFor="test-propertyGrid-item-41"
            >
              persons
            </label>
          </div>
          <div
            className="Object ExpanderContent"
          >
            <input
              className="Expander"
              defaultChecked={true}
              id="test-propertyGrid-item-42"
              onChange={[Function]}
              type="checkbox"
            />
            <label
              className="ExpanderLabel"
              htmlFor="test-propertyGrid-item-42"
            >
              inventory
            </label>
          </div>
          <div
            className="Object ExpanderContent"
          >
            <input
              className="Expander"
              defaultChecked={true}
              id="test-propertyGrid-item-43"
              onChange={[Function]}
              type="checkbox"
            />
            <label
              className="ExpanderLabel"
              htmlFor="test-propertyGrid-item-43"
            >
              scenes
            </label>
          </div>
          <div
            className="Object ExpanderContent"
          >
            <input
              className="Expander"
              defaultChecked={true}
              id="test-propertyGrid-item-44"
              onChange={[Function]}
              type="checkbox"
            />
            <label
              className="ExpanderLabel"
              htmlFor="test-propertyGrid-item-44"
            >
              scene
            </label>
          </div>
          <div
            className="Object ExpanderContent"
          >
            <input
              className="Expander"
              defaultChecked={true}
              id="test-propertyGrid-item-45"
              onChange={[Function]}
              type="checkbox"
            />
            <label
              className="ExpanderLabel"
              htmlFor="test-propertyGrid-item-45"
            >
              logBook
            </label>
          </div>
        </div>
      </div>
      <div
        className="Footer"
      >
        <button
          id="test-dialog-okay"
          onClick={[Function]}
        >
          Okay
        </button>
        <button
          id="test-dialog-cancel"
          onClick={[Function]}
        >
          Cancel
        </button>
      </div>
    </div>
  </div>
</div>
`;
